Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40174

xrandr disabling the current screen results in qml applications crashing

XMLWordPrintable

      Testcase:

      Install qt 5.3.1 from this site.

      Run the following 2 commands on a dual head config:
      '5.3/gcc_64/bin/qmlscene' 'Examples/Qt-5.3/quick/demos/samegame/samegame.qml'
      'xrandr --output (cur output with qmlscene) --off'

      With qmlscene you get a SIGSEGV.

      When running checkbox-gui on ubuntu utopic (5.3.0, but also tested with 5.3.1) you get a pure virtual method call in the following function:

      "void QQuickScreenAttached::screenChanged(QScreen *screen)"

      (See attachment for the full backtrace).

        1. bt
          6 kB
          Maarten Lankhorst
        2. bg-thread
          5 kB
          Maarten Lankhorst
        For Gerrit Dashboard: QTBUG-40174
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            mlankhorst Maarten Lankhorst
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes